--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="text-center mb-5">Welcome to "You Are Enough"</h1>
+    <h1 class="text-center mb-5">You Are Enough!</h1>
 
     
     <div class="alert alert-info text-center">
