--- a/letter.html
+++ b/letter.html
@@ -9,16 +9,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
   
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="text-center mb-5">A Letter For You</h1>
+    <h1 class="text-center mb-4" style="font-family: 'Dancing Script', cursive; color: #FF69B4;">A Letter From My Heart</h1>
 
-    <div class="alert alert-info">
-      <p>Dear friend,</p>
-      <p>I'm writing to remind you that you are strong and resilient. No matter how tough things get, remember that this is only one chapter in your life. You have already overcome so much, and you will continue to rise. It’s okay to feel low sometimes, but don't forget your worth. Keep going, you are not alone.</p>
-      <p>Sending you love and light, <br> - A Friend</p>
+    <div class="alert alert-info p-4" style="background-color: #fff0f6; border-radius: 15px;">
+      <p style="font-family: 'Open Sans', sans-serif; color: #FF1493; font-size: 1.1rem;">My Dearest Love,</p>
+      <p style="font-family: 'Open Sans', sans-serif; color: #FF69B4; font-size: 1.2rem;">
+        I want you to know that you mean everything to me. Every moment with you is filled with love, laughter, and warmth. 
+        I’m so lucky to have you in my life. When I feel lost or afraid, your love is my anchor, and I’ll always be here to support you. 
+        Together, we are unstoppable. With all my heart, I love you more than words could ever express.
+      </p>
+      <p style="font-family: 'Open Sans', sans-serif; color: #FF1493; font-size: 1.1rem;">Forever yours, <br> Your One and Only 💖</p>
     </div>
   </div>
 
