--- a/tips.html
+++ b/tips.html
@@ -58,6 +58,25 @@
           </div>
         </div>
       </div>
+
+
+      <div class="col">
+        <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
+          <div class="card-body">
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Embrace your inner beauty</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Remember that true beauty shines from within. Every imperfection makes you unique and special. Embrace your flaws, because they are a part of what makes you you.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
+          <div class="card-body">
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Self-Love</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Take time each day to appreciate yourself. You are amazing, and you deserve all the love you give others.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
