--- a/tips.html
+++ b/tips.html
@@ -54,7 +54,7 @@
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
             <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Surround Yourself with Love</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Spend time with the people who lift you up and bring positive energy into your life.</p>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Spend time with people who make you feel safe, seen, and supported. You deserve to be around energy that uplifts your heart and reminds you how deeply you're loved.</p>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
             <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Embrace your inner beauty</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Remember that true beauty shines from within. Every imperfection makes you unique and special. Embrace your flaws, because they are a part of what makes you you.</p>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Remember that true beauty shines from within. Every imperfection makes you unique and special. Embrace your flaws, because they are a part of what makes you "you".</p>
           </div>
         </div>
       </div>
