--- a/tips.html
+++ b/tips.html
@@ -53,8 +53,8 @@
       <div class="col">
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
-            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Surround Yourself with Love</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Spend time with people who make you feel safe, seen, and supported. You deserve to be around energy that uplifts your heart and reminds you how deeply you're loved.</p>
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Always Know You Are Loved</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">No matter what, always remember that you are loved beyond measure. You have so many people who care about you deeply, and you will never have to go through anything alone.</p>
           </div>
         </div>
       </div>
@@ -83,8 +83,8 @@
       <div class="col">
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
-            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Dance Like No One's Watching</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Let yourself be free. Put on your favorite song and just dance. It’s a great way to shake off the negativity and remind yourself that life is beautiful.</p>
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Talk to me</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Whenever you feel low come and talk to me, youll never be a burden on me and i will always listen whatever you have to say. Please talk to me about anything and everything you feel and think.</p>
           </div>
         </div>
       </div>
@@ -93,8 +93,8 @@
       <div class="col">
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
-            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Take Time to Breathe</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">In moments of stress, close your eyes and take a deep breath. Deep breathing can center you and bring calmness to your mind. You are stronger than you think.</p>
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;"> Write Down What You're Grateful For</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Start a gratitude journal. Write down at least three things you’re grateful for each day. This simple act can help shift your perspective and bring positivity into your life.</p>
           </div>
         </div>
       </div>
