--- a/tips.html
+++ b/tips.html
@@ -33,8 +33,8 @@
       <div class="col">
         <div class="card" style="border-radius: 15px; background-color: #ffe4e1;">
           <div class="card-body">
-            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Cherish the Little Moments</h5>
-            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">It's the small, intimate moments—like sharing a warm hug or holding hands—that remind you of how precious you are to me.</p>
+            <h5 class="card-title" style="font-family: 'Dancing Script', cursive; color: #FF1493;">Set Small, Positive Goals</h5>
+            <p class="card-text" style="font-family: 'Open Sans', sans-serif; color: #FF69B4;">Start with small, achievable goals each day. Whether it’s drinking enough water or taking a short walk, accomplishing little things can make you feel empowered.</p>
           </div>
         </div>
       </div>
