--- a/letter.html
+++ b/letter.html
@@ -1,31 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>A Letter For You</title>
 
   
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
 
-  
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      background: linear-gradient(to bottom right, #fff0f5, #ffe4e1);
+      font-family: 'Open Sans', sans-serif;
+    }
+
+    .letter-container {
+      background-color: #ffffffdd;
+      border-radius: 20px;
+      padding: 40px 30px;
+      max-width: 850px;
+      margin: 60px auto;
+      box-shadow: 0 8px 30px rgba(255, 182, 193, 0.2);
+    }
+
+    h1 {
+      font-family: 'Dancing Script', cursive;
+      color: #ff69b4;
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    p {
+      font-size: 1.15rem;
+      color: #5c2c44;
+      line-height: 1.8;
+      margin-bottom: 1.2rem;
+    }
+
+    .signature {
+      margin-top: 2rem;
+      font-size: 1.2rem;
+      color: #c2185b;
+      text-align: right;
+      font-weight: 600;
+    }
+
+    @media (max-width: 576px) {
+      .letter-container {
+        padding: 25px 20px;
+      }
+
+      h1 {
+        font-size: 2.2rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container my-5">
-    <h1 class="text-center mb-4" style="font-family: 'Dancing Script', cursive; color: #FF69B4;">A Letter From My Heart</h1>
 
-    <div class="alert alert-info p-4" style="background-color: #fff0f6; border-radius: 15px;">
-      <p style="font-family: 'Open Sans', sans-serif; color: #FF1493; font-size: 1.1rem;">My Dearest Love,</p>
-      <p style="font-family: 'Open Sans', sans-serif; color: #FF69B4; font-size: 1.2rem;">
-        I want you to know that you mean everything to me. Every moment with you is filled with love, laughter, and warmth. 
-        I’m so lucky to have you in my life. When I feel lost or afraid, your love is my anchor, and I’ll always be here to support you. 
-        Together, we are unstoppable. With all my heart, I love you more than words could ever express.
-      </p>
-      <p style="font-family: 'Open Sans', sans-serif; color: #FF1493; font-size: 1.1rem;">Forever yours, <br> Your One and Only 💖</p>
+  <div class="container letter-container">
+    <h1>💌 A Letter From My Heart</h1>
+
+    <p>My Love,</p>
+
+    <p>
+      I know that life can be incredibly heavy sometimes. I know there are moments when the world feels silent, when your heart aches quietly, and when even taking one step forward feels impossible. But even in those moments — especially in those moments — I need you to remember something:
+    </p>
+
+    <p><strong>You are the strongest person I have ever known.</strong></p>
+
+    <p>
+      Your strength isn’t just in how you carry yourself when everything is going well. Your strength is in how you rise even when everything is pulling you down. I’ve seen it in your eyes, in your resilience, in the way you continue to give your love even when you feel empty. I admire that more than words can say. In truth, <strong>you are my biggest inspiration.</strong>
+    </p>
+
+    <p>
+      When I feel lost, I think of your courage. When I want to give up, I remember your fight. And when I doubt myself, I remind myself that the strongest person I’ve ever met believes in me.
+    </p>
+
+    <p>
+      I look up to you — not because you pretend to be okay, but because even when you’re not okay, you keep going. And that is a strength few people truly understand. You have taught me what it means to love fiercely, to endure gently, and to live with compassion and courage.
+    </p>
+
+    <p>
+      So please — when you're low, when you're hurting, when everything feels like it's falling apart — <strong>remember who you are</strong>. You are not alone. You are never too much. You are never a burden. You are deeply, unshakably loved.
+    </p>
+
+    <p>
+      Even when you can’t see it, even when you can’t feel it, <strong>I am here</strong>. Always. Holding your hand, lifting your heart, and walking beside you through every high and low.
+    </p>
+
+    <p>
+      Please don’t ever forget how much light you carry. The world — <em>my world</em> — is brighter because you’re in it.
+    </p>
+
+    <div class="signature">
+      With all the love I have,<br />
+      Forever yours,<br />
+      The one who believes in you most 💖
     </div>
   </div>
 
