--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </a>
       </div>
       <div class="col">
-        <a href="grievance_form_link.html" class="btn btn-warning love-btn d-flex align-items-center justify-content-center">
+        <a href="https://mailbird.onrender.com/" class="btn btn-warning love-btn d-flex align-items-center justify-content-center">
           <i class="fas fa-phone fa-2x me-3"></i> Contact Me
         </a>
       </div>
