--- a/playlists.html
+++ b/playlists.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Your Playlists</title>
 
-  <!-- Bootstrap CSS -->
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Google Fonts -->
+  
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- FontAwesome -->
+  
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-  <!-- Custom Styles -->
+  
   <style>
     body {
       background: linear-gradient(to bottom, #fff0f6, #ffe4e1);
@@ -70,17 +70,17 @@
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
-      <!-- Playlist 1 -->
+      
       <div class="col">
-        <a href="https://open.spotify.com/playlist/your_playlist_1" target="_blank" class="text-decoration-none">
+        <a href="https://open.spotify.com/playlist/0g3gUPfB5j5WnnxcXDedWc?si=0290be75dc754b73" target="_blank" class="text-decoration-none">
           <div class="card playlist-card">
-            <img src="images/playlist1.jpg" alt="Chill Vibes" class="playlist-img">
-            <span class="playlist-title">Chill Vibes</span>
+            <img src="images/playlist1.jpg" alt="🕊️" class="playlist-img">
+            <span class="playlist-title">🕊️</span>
           </div>
         </a>
       </div>
 
-      <!-- Playlist 2 -->
+    
       <div class="col">
         <a href="https://open.spotify.com/playlist/your_playlist_2" target="_blank" class="text-decoration-none">
           <div class="card playlist-card">
