--- a/playlists.html
+++ b/playlists.html
@@ -74,7 +74,7 @@
       <div class="col">
         <a href="https://open.spotify.com/playlist/0g3gUPfB5j5WnnxcXDedWc?si=0290be75dc754b73" target="_blank" class="text-decoration-none">
           <div class="card playlist-card">
-            <img src="images/playlist1.jpg" alt="🕊️" class="playlist-img">
+            <img src="images/yapper_cat.png" alt="🕊️" class="playlist-img">
             <span class="playlist-title">🕊️</span>
           </div>
         </a>
