--- a/playlists.html
+++ b/playlists.html
@@ -82,10 +82,10 @@
 
     
       <div class="col">
-        <a href="https://open.spotify.com/playlist/your_playlist_2" target="_blank" class="text-decoration-none">
+        <a href="https://open.spotify.com/playlist/6Tz5Dz6BpqU96gab44D6hW?si=2da8f0d0f5ea44b9" target="_blank" class="text-decoration-none">
           <div class="card playlist-card">
-            <img src="images/playlist2.jpg" alt="You & Me Forever" class="playlist-img">
-            <span class="playlist-title">You & Me Forever</span>
+            <img src="images/two-of-us.png" alt="thing i said." class="playlist-img">
+            <span class="playlist-title">thing i said.</span>
           </div>
         </a>
       </div>
