--- a/playlists.html
+++ b/playlists.html
@@ -90,21 +90,21 @@
         </a>
       </div>
 
-      <!-- Playlist 3 -->
+      
       <div class="col">
-        <a href="https://open.spotify.com/playlist/your_playlist_3" target="_blank" class="text-decoration-none">
+        <a href="https://open.spotify.com/playlist/2sDDdXtJUueoAy4B4di37a?si=e1955971d3e84443" target="_blank" class="text-decoration-none">
           <div class="card playlist-card">
-            <img src="images/playlist3.jpg" alt="Rainy Day Love" class="playlist-img">
-            <span class="playlist-title">Rainy Day Love</span>
+            <img src="images/hehe.png" alt="hehe" class="playlist-img">
+            <span class="playlist-title">hehe</span>
           </div>
         </a>
       </div>
 
-      <!-- Add more playlists below the same way -->
+      <!-- new ones here -->
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
