--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  
 </head>
 <body>
   <div class="container my-5 text-center">
