--- a/tips.html
+++ b/tips.html
@@ -13,6 +13,7 @@
 
   
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="container my-5">
